--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <h1>Minha Lista de Tarefas</h1>
   <div class="input-container">
     <input type="text" id="tarefa" placeholder="Digite uma nova tarefa" />
-    <button id="adicionar">Adicionar</button>
+    <button id="adicionar">Adicionar</button> 
   </div>
   <ul id="lista-tarefas">
     <!-- As tarefas serão adicionadas aqui -->
@@ -50,7 +50,7 @@
 
   <footer>
     <div class="footer-content">
-        <p>&copy; 2023 Davi Rhuan Lima</p>
+        <p>&copy; 2023 Davi Rhuan</p>
     </div>
   </footer>
 
